--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,12 +6,8 @@ repo: upptime # Your GitHub repository name
 sites:
   - name: Google
     url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Broken Site
-    url: https://thissitedoesnotexist.com
+  - name Blog
+    url: https://blog.printlake.com
   - name: Secret Site
     url: $SECRET_SITE
 
