--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,13 +1,11 @@
 # Change these first
-owner: upptime # Your GitHub username
+owner: wuwb # Your GitHub username
 repo: upptime # Your GitHub repository name
 
 # Add your sites here
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Blog
-    url: https://blog.printlake.com
+  - name: Printlake
+    url: https://printlake.com
   - name: Secret Site
     url: $SECRET_SITE
 
